@@ -1,9 +1,5 @@
 ifeq ($(subdir),elf)
 sysdep_routines	+= dl-vdso
-ifeq ($(build-shared),yes)
-# This is needed for DSO loading from static binaries.
-sysdep-dl-routines += dl-static
-endif
 endif
 
 ifeq ($(subdir),misc)
